Dodana logika za prikaz vremena glede na lokacijo uporabnika in prikaz trenutnega vremena z ikono